# dataflow-etl

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: mart_customer_orders.sql  mart_daily_revenue.sql  schema.yml
dbt/models/staging/: schema.yml  stg_customers.sql  stg_orders.sql
dbt/tests/: assert_revenue_positive.sql
docker/: Dockerfile  init.sql
extract/: generator.py
great_expectations/: validate.py
load/: postgres_loader.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_generator.py  test_loader.py
